--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="cabecalho">
         <nav class="navbar">
             <div class="logo">
-                <img src="images/logo.png"
+                <img src="./logo.png"
                     height="90%">
             </div>
             <div class="menu-toggle"></div>
