--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mapa de Karnaugh</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png"
 </head>
 <body>
     <header class="cabecalho">
         <nav class="navbar">
             <div class="logo">
-                <img src="./logo.png"
+                <img src="images/logo.png"
                     height="90%">
             </div>
             <div class="menu-toggle"></div>
@@ -40,10 +41,6 @@
                             </div>
                         </div>
                         <div class="truthtable-head-tables">
-
-                        </div>
-                        <div class="truthtable-head-variables">
-
                         </div>
                     </div>
                 <div class="truthtable-buttons">
